public/style/app.css
.img-thumbnail img {
    width: 100%;
}

.img-thumbnail {
    padding: 0;
}

.img-thumbnail .caption {
    padding: 9px;
}

.delete-item {
    display: inline;
}

.spacer {
    width: 95%;
    /* margin: 25px auto; */
    color: #f8f9fa;
}

.dark-spacer {
    border-top: 1px solid rgba(0, 0, 0, .5);
}

.row-spacer {
    margin-bottom: 15px;
}

.new-item-form {
    width: 100%;
    margin: 25px auto;
}

.new-item-form .form-inline .form-group input {
    margin: 7px auto;
    width: 100%;
}

.new-item-form div {
    width: 100%;
}

form textarea {
    width: 100%;
}

.page-header {
    display: inline-block;
    width: 100%;
    font-size: 6vw;
    font-weight: 500;
    line-height: 1.5;
}

.note-container {
    overflow: auto;
}

.menuItem {
    margin: 0;
}

.centered {
    margin: auto;
    text-align: center;
}

.vertical-center {
    margin: 0;
    -ms-transform: translateY(25%);
    transform: translateY(25%);
}

.row div .btn {
    width: 100%;
}

.rating-btn {
    max-width: 100px;
    display: inline-block;
}

.rating-content {
    display: inline-block;
}

.menu-item-container {
    margin-bottom: 5px;
    padding: 5px;
    border-width: 1px;
    border-color: grey;
    border-style: solid;
    background: #f8f9fa;
}

.rating {
    padding: 5px;
}

.formButtonsContainer {
    padding-top: 10px;
}

.rating:nth-child(odd) {
    background-color: #e9e9e9;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000;
}

.sticky + .content {
    padding-top: 90px;
}

[type=radio]:checked + picture img {
    opacity: 1;
    border-bottom: 0.2rem solid #222;
}

[type=radio]:hover + picture img {
    opacity: 1;
}

[type=radio] + picture img {
    cursor: pointer;
    opacity: 0.5;
}

[type=radio] {
    position: absolute;
    opacity: 0;
    width: 0;
    height: 0;
}

[type=checkbox] {
    position: absolute;
    opacity: 0;
    width: 0;
    height: 0;
}

[type=checkbox]+label {
    cursor: pointer;
}

.navigation {
    margin: 0 15px 0 15px;
}

.rating-button {
    margin-top: 20px;
}

.rating-image {
    padding: 0 10px 0 10px;
}

.no-padding {
    padding: 0;
}

.low-padding {
    padding: 5px;
}

.no-margin {
    margin: 0px;
}

.low-margin {
    margin: 8px;
}

.header-text {
    font-size: 5vw;
}

.sub-header-text {
    font-size: 4vw;
}

.logo-icon{
    color: #007bff;
    font-size: 12vw;
}

@media only screen and (min-width: 700px) {
    .hide-wide {
        display: none;
    }
}

.recommendation-exists {
    width: 100%;
}

